added id's to the user model
